--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<app-header [items]="items"></app-header>
+<h1>Home Page</h1>
+
+{{ title }}
+
+<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="title">
+
+<button (click)="exibirAlerta('não tem')" type="button" class="btn btn-primary">Primary</button>
+
 
 <router-outlet></router-outlet>
